name:                teodorheggelund-com
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/teodorlu/teodorheggelund.com
license-file:        LICENSE
author:              Teodor Heggelund
maintainer:          teodor@teodorheggelund.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable teodorheggelund-com
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
